--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Corpix <me@corpix.ru> (http://corpix.ru)",
-  "name": "smsPilot",
+  "name": "smspilot",
   "description": "Send sms via smspilot.ru",
   "version": "0.0.1",
   "repository": {
